[package]
name = "aws-pipeline"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = { version = "1.8.8", features = ["behavior-version-latest"] }
aws-sdk-ecs = "1.103.0"
aws-sdk-s3 = "1.109.0"
aws-sdk-sqs = "1.88.0"
crossterm = "0.29.0"
ratatui = "0.29.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
