[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-multipart = "0.7.2"
actix-web = "4.11.0"
aws-config = { version = "1.8.10", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.112.0"
bytes = "1.11.0"
futures-util = "0.3.31"
tokio = { version = "1.48.0", features = ["full"] }
uuid = { version = "1.18.1", features = ["v4"] }
